test/Fail/Opaque1.err
Opaque1.agda:11.9-12: error: [UnequalTerms]
Set !=< foo
when checking that the expression Nat has type foo
